--- a/package.json
+++ b/package.json
@@ -18,8 +18,11 @@
     "express-validator": "^6.15.0",
     "jsonwebtoken": "^9.0.0",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "pg": "^8.9.0",
-    "sequelize": "^6.30.0"
+    "sequelize": "^6.30.0",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^4.6.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
