feat: Commit settings

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,8 @@
         "helpers",
         "models",
         "routes",
-        "middlewares"
+        "middlewares",
+        "validators",
+        "controllers"
     ]
 }
