--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "dev": "cross-env NODE_ENV=development nodemon index.js",
-    "test": "cross-env NODE_ENV=test jest --verbose --silent --detectOpenHandles"
+    "dev": "nodemon index.js",
+    "test": "jest --verbose --silent --detectOpenHandles"
   },
   "keywords": [],
   "author": "",
