feat: Commit settings

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,7 @@
         "routes",
         "middlewares",
         "validators",
-        "controllers"
+        "controllers",
+        "tests"
     ]
 }
