--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,7 @@
         "middlewares",
         "validators",
         "controllers",
-        "tests"
+        "tests",
+        "constants"
     ]
 }
